samples/_failures_safe/1761801243_c9ab5a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_413f5a02.c: In function ‘main’:
./samples/SAFE/__tmp_413f5a02.c:158: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_413f5a02.c:157:5: error: expected declaration or statement at end of input
  157 |     if
      |     ^~
